examples/test/testpolicy10874.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10874
  namespace: namespace400
spec:
  podSelector:
    matchLabels:
      key20: value24
      key19: value49
      key3: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value45
      podSelector:
        matchLabels:
          key4: value47
          key8: value12
